<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAEFDE"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="276dp"
        android:layout_height="199dp"
        android:layout_marginTop="-50dp"
        android:layout_marginEnd="-100dp"
        android:rotation="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/elemenkananatas" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="93dp"
        android:layout_height="134dp"
        android:layout_marginStart="-6dp"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/elemenkiribawah" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="214dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/elemenkiriatas" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="181dp"
        android:layout_height="110dp"
        android:layout_marginBottom="-60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/elemenkananbawah" />

    <ImageView
        android:id="@+id/decree"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:contentDescription="@string/decree"
        android:src="@drawable/decree"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <ImageView
        android:id="@+id/opsi_mengenal_uang"
        style="?android:borderlessButtonStyle"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="40dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:contentDescription="@string/opsi_mengenal_uang"
        android:focusable="true"
        android:src="@drawable/opsimengenaluang"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/decree"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <ImageView
        android:id="@+id/opsi_berbelanja"
        style="?android:borderlessButtonStyle"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="40dp"
        android:clickable="true"
        android:contentDescription="@string/opsi_berbelanja"
        android:focusable="true"
        android:src="@drawable/opsiberbelanja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/decree"
        app:layout_constraintTop_toBottomOf="@+id/opsi_mengenal_uang"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/mute"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:visibility="gone"
        android:src="@drawable/ic_baseline_volume_off_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/play"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:visibility="gone"
        android:src="@drawable/ic_baseline_volume_up_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>