<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAEFDE"
    tools:context=".MonopolyActivity">



    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:src="@drawable/board"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/posisi_0"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/pion"
        app:layout_constraintBottom_toBottomOf="@+id/posisi_1"
        app:layout_constraintStart_toEndOf="@+id/posisi_1"
        app:layout_constraintTop_toTopOf="@+id/posisi_1"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/posisi_1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:src="@drawable/pion"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="@+id/posisi_2"
        app:layout_constraintStart_toEndOf="@+id/posisi_2"
        app:layout_constraintTop_toTopOf="@+id/posisi_2"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/posisi_2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/pion"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kocok_dadu" />


    <ImageView
        android:id="@+id/posisi_3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/pion"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="@+id/posisi_2"
        app:layout_constraintEnd_toStartOf="@+id/posisi_2"
        app:layout_constraintTop_toTopOf="@+id/posisi_2"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/posisi_4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/pion"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="@+id/posisi_3"
        app:layout_constraintEnd_toStartOf="@+id/posisi_3"
        app:layout_constraintTop_toTopOf="@+id/posisi_3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/posisi_5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:src="@drawable/pion"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/posisi_4"
        app:layout_constraintEnd_toEndOf="@+id/posisi_4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/posisi_4" />

    <ImageView
        android:id="@+id/posisi_6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:src="@drawable/pion"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/posisi_5"
        app:layout_constraintEnd_toEndOf="@+id/posisi_5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/posisi_5" />

    <ImageView
        android:id="@+id/posisi_7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:src="@drawable/pion"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/posisi_6"
        app:layout_constraintEnd_toEndOf="@+id/posisi_6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/posisi_6" />

    <ImageView
        android:id="@+id/posisi_8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/pion"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/posisi_7"
        app:layout_constraintEnd_toEndOf="@+id/posisi_7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/posisi_7" />

    <ImageView
        android:id="@+id/posisi_9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:src="@drawable/pion"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="@+id/posisi_8"
        app:layout_constraintStart_toEndOf="@+id/posisi_8"
        app:layout_constraintTop_toTopOf="@+id/posisi_8"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/posisi_10"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:src="@drawable/pion"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="@+id/posisi_9"
        app:layout_constraintStart_toEndOf="@+id/posisi_9"
        app:layout_constraintTop_toTopOf="@+id/posisi_9"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/posisi_11"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:src="@drawable/pion"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="@+id/posisi_10"
        app:layout_constraintStart_toEndOf="@+id/posisi_10"
        app:layout_constraintTop_toTopOf="@+id/posisi_10"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/posisi_12"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:src="@drawable/pion"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="@+id/posisi_11"
        app:layout_constraintStart_toEndOf="@+id/posisi_11"
        app:layout_constraintTop_toTopOf="@+id/posisi_11"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/posisi_13"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/pion"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="@+id/posisi_12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/posisi_12"
        app:layout_constraintTop_toBottomOf="@+id/posisi_12" />

    <ImageView
        android:id="@+id/posisi_14"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/pion"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="@+id/posisi_13"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/posisi_13"
        app:layout_constraintTop_toBottomOf="@+id/posisi_13" />

    <ImageView
        android:id="@+id/posisi_15"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/pion"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="@+id/posisi_14"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/posisi_14"
        app:layout_constraintTop_toBottomOf="@+id/posisi_14" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="276dp"
        android:layout_height="199dp"
        android:layout_marginTop="-50dp"
        android:layout_marginEnd="-100dp"
        android:rotation="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/elemenkananatas" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="93dp"
        android:layout_height="134dp"
        android:layout_marginStart="-6dp"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/elemenkiribawah" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="214dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/elemenkiriatas" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="181dp"
        android:layout_height="110dp"
        android:layout_marginBottom="-60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/elemenkananbawah" />

    <ImageView
        android:id="@+id/image_view_dice"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/dice1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/kocok_dadu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Kocok Dadu"
        android:visibility="visible"
        android:clickable="true"
        android:backgroundTint="@color/blue_200"
        app:layout_constraintEnd_toEndOf="@+id/image_view_dice"
        app:layout_constraintStart_toStartOf="@+id/image_view_dice"
        app:layout_constraintTop_toBottomOf="@+id/image_view_dice"
        android:focusable="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="Jumlah Uang:"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.246" />

    <TextView
        android:id="@+id/jmlUang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/jumlah_uang"
        android:textSize="20sp"
        android:textColor="@color/blue_700"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Jumlah Jajanan:"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/jmlUang"
        app:layout_constraintStart_toStartOf="@+id/jmlUang"
        app:layout_constraintTop_toBottomOf="@+id/jmlUang" />

    <TextView
        android:id="@+id/jmlJajanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <ImageView
        android:id="@+id/img_makanan"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.325"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/harga_makanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/jumlah_uang"
        android:textColor="@color/blue_700"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/img_makanan"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/img_makanan"
        app:layout_constraintTop_toBottomOf="@+id/img_makanan" />

    <TextView
        android:id="@+id/apakah_mau_beli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Apakah kamu ingin membelinya?"
        android:textColor="@color/blue_700"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/harga_makanan"
        app:layout_constraintStart_toStartOf="@+id/harga_makanan"
        app:layout_constraintTop_toBottomOf="@+id/harga_makanan" />


    <Button
        android:id="@+id/btn_ya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/start"
        android:focusable="true"
        android:text="YA"
        android:backgroundTint="@color/blue_200"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_tidak"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.763"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_tidak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:clickable="true"
        android:contentDescription="@string/exit"
        android:focusable="true"
        android:text="TIDAK"
        android:backgroundTint="@color/blue_200"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_ya"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.763" />

    <TextView
        android:id="@+id/penawaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="Ada penawaran untuk kamu:"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/image_view_dice"
        app:layout_constraintEnd_toEndOf="@+id/image_view_dice"
        app:layout_constraintStart_toStartOf="@+id/image_view_dice" />

    <TextView
        android:id="@+id/klik_buka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="(Klik untuk membuka)\n👇🏾"
        android:textColor="@color/blue_700"
        android:textSize="12sp"
        android:textStyle="bold"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/image_view_dice"
        app:layout_constraintEnd_toEndOf="@+id/image_view_dice"
        app:layout_constraintStart_toStartOf="@+id/image_view_dice" />

    <ImageView
        android:id="@+id/mistery"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/mistery"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />


    <ImageView
        android:id="@+id/mute"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:visibility="gone"
        android:src="@drawable/ic_baseline_volume_off_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/play"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:visibility="gone"
        android:src="@drawable/ic_baseline_volume_up_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>